stat section complate

--- a/css/style.css
+++ b/css/style.css
@@ -118,3 +118,103 @@ html {
   color: #34547A;
   background-color: transparent;
 }
+
+/* ABOUT */
+
+.about {
+  max-width: 540px;
+  margin: 0 auto;
+  padding-top: 120px;
+  padding-bottom: 100px;
+  text-align: center;
+}
+
+.section-title {
+  margin-top: 0;
+  margin-bottom: 50px;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 37px;
+  text-align: center;
+  color: #222222;
+}
+
+.stat {
+  padding-top: 100px ;
+  padding-bottom: 100px;
+  background-color: #34547A;
+}
+
+.desc-list {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0;
+}
+
+.desc-wrapper {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.desc-wrapper::before {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  top: 0;
+  left: -60px;
+  background-image: url("/img/doc.svg");
+
+  content: "";
+}
+
+.desc-date {
+  margin: 0;
+  font-weight: 500;
+  font-size: 21px;
+  line-height: 25px;
+  color: #FFFFFF;
+}
+
+.desc-title {
+  font-size: 16px;
+  line-height: 26px;
+  color: #FFFFFF;
+}
+
+.skills {
+  padding: 100px 0;
+}
+
+.skills-title {
+  text-align: left;
+}
+
+.skills-type {
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+
+.skills-level {
+  position: relative;
+  margin-bottom: 30px;
+  width: 445px;
+  height: 4px;
+  background-color: #C4C4C4;
+  z-index: 0;
+}
+
+.skills-level::before {
+  position: absolute;
+  width: 80%;
+  height: 4px;
+  top: 0;
+  left: 0;
+  background-color: #34547A;
+  z-index: 2;
+
+  content: "";
+}
+
