--- a/css/style.css
+++ b/css/style.css
@@ -265,3 +265,37 @@ html {
   cursor: pointer;
 }
 
+/* GALLERY SECTION */
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.gallery-wrapper {
+  position: relative;
+  display: flex;
+  width: 25%;
+  cursor: pointer;
+}
+
+.gallery-wrapper::after {
+  position: absolute;
+  background: url("/img/view.png") no-repeat center center, linear-gradient(0deg, rgba(52, 84, 122, 0.8), rgba(52, 84, 122, 0.8));
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  content: "";
+}
+
+.gallery-wrapper:hover.gallery-wrapper::after {
+  opacity: 1;
+}
+
+.gallery-image {
+  width: 100%;
+  height: auto;
+}
+
+
